# smartphone-OS

./: .gitignore  Cargo.toml  Makefile  README.md  linker.ld
.cargo/: config.toml
docs/: SDD.md  SDLC.md  SRS.md
src/: asm.s  main.rs  panic.rs  uart.rs
src/driver/: gpio.rs  manager.rs  mod.rs  uart.rs
src/ipc/: client.rs  mod.rs  server.rs
src/service/: echo_service.rs  mod.rs
